--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
         <div class="project">
             <h3>To-Do List App</h3>
             <p>A dynamic and user-friendly task management application built with JavaScript.</p>
-            <a href="https://github.com/arunsanjel/todo-list" target="_blank">View on GitHub</a>
+            <a href="https://github.com/Arun-Sanjel/TO-DO-List" target="_blank">View on GitHub</a>
         </div>
         <div class="project">
             <h3>Weather Dashboard</h3>
             <p>A weather application using OpenWeather API to fetch and display real-time data.</p>
-            <a href="https://github.com/arunsanjel/weather-dashboard" target="_blank">View on GitHub</a>
+            <a href="https://github.com/Arun-Sanjel/WeatherDashboard" target="_blank">View on GitHub</a>
         </div>
     </section>
 
     <section id="contact">
         <h2>Contact Me</h2>
         <p>Email: <a href="mailto:sanjelarun8@gmail.com">sanjelarun8@gmail.com</a></p>
-        <p>GitHub: <a href="https://github.com/arunsanjel" target="_blank">https://github.com/arunsanjel</a></p>
+        <p>GitHub: <a href= "https://github.com/Arun-Sanjel" target="_blank">https://github.com/arunsanjel</a></p>
         <p>LinkedIn: <a href="https://linkedin.com/in/arunsanjel" target="_blank">https://linkedin.com/in/arunsanjel</a>
         </p>
     </section>
